--- a/app/views/layouts/tolk/application.html.erb
+++ b/app/views/layouts/tolk/application.html.erb
@@ -5,12 +5,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Tolk</title>
+  <%= javascript_include_tag :defaults %>
 
-  <% if respond_to?(:sprockets_include_tag) %>
-    <%= sprockets_include_tag %>
-  <% else %>
-    <%= javascript_include_tag :defaults %>
-  <% end %>
 
   <%= stylesheet_link_tag "/tolk/reset", "/tolk/screen" %>
   <%= yield :head %>
@@ -25,8 +21,11 @@
   </div>
   
   <script type="text/javascript">
-    $$('td textarea').each(function(element) {
-      element.setStyle({height: element.up('td').measure('height')+'px'});
+    $(document).ready(function() {
+      $("td textarea").each(function(element) {
+        var tdheight = element.parent().height();
+        element.height(tdheight);
+      });
     });
   </script>
 </body>
