--- a/app/views/layouts/tolk/application.html.erb
+++ b/app/views/layouts/tolk/application.html.erb
@@ -23,8 +23,9 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $("td textarea").each(function(index, element) {
-        var tdheight = $(element).parent().height();
-        element.height(tdheight);
+        $element = $(element);
+        var tdheight = $element.parent().height();
+        $element.height(tdheight);
       });
     });
   </script>
